# CGSim

./: CMakeLists.txt  README.md
CGSim-Application/source/: Node.py  Site.py  app.py
CGSim-Application/ui/: AddSite.ui  CGSim.ui  NodeDisplay.ui  SiteDisplay.ui  theme.qss  theme1.qss
LLM-Interface/clients/: SimulationAnalysis.py
LLM-Interface/schema/: metadata_explanation.txt  simulation_database_schema.txt
cmake/: CGSimConfig.cmake.in
config-files/: config_base.json  jan_100_BNL.csv  site_conn_info.json  site_info.json  toy_config.json
config-files/scalability_configs/: config_10_sites.json  config_11_sites.json  config_12_sites.json  config_13_sites.json  config_14_sites.json  config_15_sites.json  config_16_sites.json  config_17_sites.json  config_18_sites.json  config_19_sites.json  config_1_sites.json  config_20_sites.json  config_21_sites.json  config_22_sites.json  config_23_sites.json  config_24_sites.json  config_25_sites.json  config_26_sites.json  config_27_sites.json  config_28_sites.json  config_29_sites.json  config_2_sites.json  config_30_sites.json  config_31_sites.json  config_32_sites.json  config_33_sites.json  config_34_sites.json  config_35_sites.json  config_36_sites.json  config_37_sites.json  config_38_sites.json  config_39_sites.json  config_3_sites.json  config_40_sites.json  config_41_sites.json  config_42_sites.json  config_43_sites.json  config_44_sites.json  config_45_sites.json  config_46_sites.json  (+19 more)
dispatch_plugins/RL-test-plugin/: CMakeLists.txt  PythonServer.ipynb
dispatch_plugins/RL-test-plugin/.ipynb_checkpoints/: PythonServer-checkpoint.ipynb
dispatch_plugins/RL-test-plugin/include/: rl_dispatcher.h
dispatch_plugins/RL-test-plugin/include/.ipynb_checkpoints/: rl_dispatcher-checkpoint.h
dispatch_plugins/RL-test-plugin/src/: RLDispatcherPlugin.cpp  rl_dispatcher.cpp
dispatch_plugins/RL-test-plugin/src/.ipynb_checkpoints/: RLDispatcherPlugin-checkpoint.cpp  rl_dispatcher-checkpoint.cpp
dispatch_plugins/simple-test-plugin/: CMakeLists.txt
dispatch_plugins/simple-test-plugin/include/: logger.h  output.h  simple_dispatcher.h  sqliteSaver.h  workload_manager.h
dispatch_plugins/simple-test-plugin/src/: SimpleDispatcherPlugin.cpp  output.cpp  simple_dispatcher.cpp  sqliteSaver.cpp  workload_manager.cpp
dispatch_plugins/simple-test-plugin/src/.ipynb_checkpoints/: simple_dispatcher-checkpoint.cpp
documentation/docs/: atlasgridsimulationdocs.md
include/: CGSim.h  DispatcherPlugin.h  PluginLoader.h  actions.h  file_manager.h  host_extensions.h  job.h  job_executor.h  logger.h  parser.h  platform.h
install/include/CGSim/: file_manager.h  job.h  logger.h
install/share/cmake/CGSim/: CGSimConfigVersion.cmake
misc/: misc.py  run_job_sim.py  run_sim.py
new_data/: config_base.json  new_site_conn_info.json  new_site_info.json
preprocessdata/: preprocess.ipynb  transformer_surrogate_model.pth
python_scripts/calibration_scripts/: BO_calibration.py  BO_calibration_cpuspeed.py  CMA_calibration.py  auto_cal_heuristic.py  brute_force_cal.py  calibrate_error.py  manual_calib.py  random_search.py  random_search_cpuspeed.py
python_scripts/misc/: misc.py  update_site_info.py
python_scripts/new_config_convert_scripts/: conn_convert.py  convert.py  produce_conn_json.py
scalability_results/: scalability_results_20250830_134842.json
src/: main.cpp
toy_data/: mimic_config.json  mimic_job.csv  toy_job.csv  toy_new_site_conn_info.json  toy_new_site_info.json
util/: actions.cpp  file_manager.cpp  host_extensions.cpp  job_executor.cpp  parser.cpp  platform.cpp  sqliteSaver.cpp
